--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,169 @@
-.App {
-  text-align: center;
+body {
+	background: rgba(38, 20, 72, 0.9) 59%;
+	color: #f8f2f2;
+}
+.bt-1{
+	width: 100px;
+	color:rgba(38, 20, 72, 0.9) 59%;
+	background-color:rgb(47, 21, 103);
+	margin-top: 20px;
+	align-items: flex-end;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.movie-app > .row {
+	overflow-x: auto;
+	flex-wrap: nowrap;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.font{
+	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	color: black;
+}
+.movie-info{
+  display: flex-lg-fill;
+  flex-wrap: wrap;
+
+}
+
+.image-container {
+	position: relative;
+	transition: transform 0.2s;
+  box-shadow: 1px 2px 3px;
+  margin-right: 30px;
+  padding: 10px;
+}
+
+.image-container:hover {
+	cursor: pointer;
+	transform: scale(1.1);
+}
+
+.image-container:hover .overlay {
+	opacity: 1;
+}
+
+.overlay {
+	position: absolute;
+	background: rgba(0, 0, 0, 0.8);
+	width: 100%;
+	transition: 0.5s ease;
+	opacity: 0;
+	bottom: 0;
+	font-size: 20px;
+	padding: 20px;
+	text-align: center;
+}
+.heading{
+	font-family: cursive;
+	font-weight: 300;
+	font-variant: small-caps;
+	font-size: large;
+	box-shadow: 1px 2px 3px 4px;
+	height: 100px;
+}
+
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  button {
+	border: none;
+	outline: none;
+	width: 100%;
+	padding: 15px 0;
+	color: #fff;
+	font-size: 16px;
+	letter-spacing: 1px;
+	background: #603bbb;
+	cursor: pointer;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .login {
+	width: 100%;
+	min-height: 100vh;
+	padding: 0 20px;
+	background: #e9e9e9;
+	display: flex;
   }
-}
+  
+  .login .loginContainer {
+	padding: 60px;
+	margin: auto;
+	width: 100%;
+	max-width: 520px;
+	min-height: 600px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	background: radial-gradient(
+	  ellipse at left bottom,
+	  rgba(22, 24, 47, 1) 0%,
+	  rgba(38, 20, 72, 0.9) 59%,
+	  rgba(17, 27, 75, 0.9) 100%
+	);
+	box-shadow: 0 50px 70px -20px rgba(0, 0, 0, 0.8);
+  }
+  
+  .login .loginContainer label {
+	color: white;
+	margin: 14px 0;
+	display: block;
+	font-size: 22px;
+	line-height: 1;
+  }
+  
+  .login .loginContainer input {
+	width: 100%;
+	border: none;
+	outline: none;
+	font-size: 19px;
+	padding: 10px;
+	background: rgba(255, 255, 255, 0.1);
+	color: #fff;
+	letter-spacing: 1px;
+  }
+  
+  .login .loginContainer .btnContainer {
+	width: 100%;
+	padding: 24px 0;
+  }
+  
+  .login .loginContainer .btnContainer p {
+	margin: 14px 0 0 0;
+	text-align: right;
+	color: #fff;
+  }
+  
+  .login .loginContainer .btnContainer p span {
+	color: yellow;
+	font-weight: 500;
+	letter-spacing: 0.5px;
+	margin-left: 5px;
+	cursor: pointer;
+	transition: all 400ms ease-in-out;
+  }
+  
+  .login .loginContainer .btnContainer p span:hover {
+	color: red;
+  }
+  
+  .login .loginContainer .errorMsg {
+	color: red;
+	font-size: 16px;
+  }
+  
+  .hero {
+	width: 100%;
+	min-height: 100vh;
+	background: radial-gradient(
+	  ellipse at left bottom,
+	  rgba(22, 24, 47, 1) 0%,
+	  rgba(38, 20, 72, 0.9) 59%,
+	  rgba(17, 27, 75, 0.9) 100%
+	);
+  }
+  
